styled everyting in css but single todo has overflow bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -68,5 +68,29 @@
 
 /*TodoList*/
 .todo-list {
+  display:flex;
+  margin-top: 30px;
+  flex-direction: column;
+  width: 100%;
+  max-width: 450px;
   
+}
+.single-todo {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 8px;
+  background-color: rgb(22, 28, 72) ;
+  border-radius: 8px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.single-todo input:nth-child(1) {
+  width: 20px;
+  margin-right: 15px;
+}
+.single-todo p:nth-child(3) {
+  margin-left: auto;
+  margin-right: 20px;
 }
